# composer-agent

./: .gitignore  README.md  audit_p1.py  audit_p_all.py  audit_sample.xml  pyproject.toml  walkthrough.md
contracts/: implementation_plan.md  interfaces.md  patchplan.schema.json  repair_rules.md  schema.json
docs/: patchplan.md
samples/: generate_midi.py  sample.mid
src/musicdiff/: __init__.py  __main__.py  align.py  diff.py  exceptions.py  models.py  parser_midi.py  parser_xml.py  validate.py
src/musicdiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/musicdiff/repair/: __init__.py  __main__.py  applier.py  models_repair.py  planner.py
tests/: conftest.py  test_align.py  test_applier.py  test_contract_compliance.py  test_contracts.py  test_diff.py  test_parsers.py  test_patch_apply.py  test_patch_idempotency.py  test_patchplan_schema.py  test_planner.py  test_repair_integration.py  test_repair_models.py
