[project]
name = "musicdiff"
version = "0.1.0"
description = "Notation↔MIDI measure-aware diff tool"
requires-python = ">=3.11"
dependencies = [
    "music21>=9.1.0,<10",
    "mido>=1.3.0,<2",
    "pydantic>=2.0.0,<3",
    "jsonschema>=4.0.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
musicdiff = "musicdiff.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
